# auto_construct_dnn

./: CMakeLists.txt  test_dnn.cpp
include/tkDNN/: Layer.h  NetworkRT.h
